--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-SQLAlchemy==3.0.2
 SQLAlchemy==1.4.53
 openai==1.3.0
 httpx==0.24.1
+PyPDF2==3.0.1
 python-dotenv==1.0.0
 requests==2.31.0
 beautifulsoup4==4.12.2
